--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <html>
+<head>
+  <script src="css/source-sans-pro.js"></script>
+  <link href="css/styles.css" rel="stylesheet">
+</head>
 <body>
 
 <script id="home-tpl" type="text/x-handlebars-template">
     <div class='header'><h1>Home</h1></div>
-    <div class='search-bar'><input class='search-key' type="text"/></div>
+    <div class='search-bar'><input class='search-key' type="search"/></div>
     <ul class='employee-list'></ul>
 </script>
 
 <script id="employee-li-tpl" type="text/x-handlebars-template">
     {{#.}}
-    <li><a href="#employees/{{this.id}}">{{this.firstName}} {{this.lastName}}</a><div style="font-size:10px;">{{this.title}}</div></li>
+    <li><a href="#employees/{{this.id}}">{{this.firstName}} {{this.lastName}}<br/>{{this.title}}</a></li>
     {{/.}}
 </script>
 
