- Fixed touch events

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+  <title>Phonegap</title>
+  <meta name="viewport" content="width=device-width, user-scalable=no" />
   <script src="css/source-sans-pro.js"></script>
   <link href="css/styles.css" rel="stylesheet">
 </head>
