--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
 <html>
 <head>
-  <title>Phonegap</title>
+  <title>EPS Search</title>
   <meta name="viewport" content="width=device-width, user-scalable=no" />
   <script src="css/source-sans-pro.js"></script>
   <link href="css/styles.css" rel="stylesheet">
@@ -8,40 +9,40 @@
 <body>
 
 <script id="home-tpl" type="text/x-handlebars-template">
-    <div class='header'><h1>Home</h1></div>
-    <div class='search-bar'><input class='search-key' type="search"/></div>
-    <div class="scroll"><ul class='employee-list'></ul></div>
+    <div class='header'><h1>EPS Search</h1></div>
+    <div class='search-bar'><input id='search-key' class='search-key' type="search"/></div>
+    <div class="scroll"><ul class='result-list'></ul></div>
 </script>
 
-<script id="employee-li-tpl" type="text/x-handlebars-template">
+<script id="result-li-tpl" type="text/x-handlebars-template">
     {{#.}}
-    <li><a href="#employees/{{this.id}}">{{this.firstName}} {{this.lastName}}<br/>{{this.title}}</a></li>
+    <li><a href="#results/{{this.id}}">{{this.text}}<br/>{{this.details}}</a></li>
     {{/.}}
 </script>
 
-<script id="employee-tpl" type="text/x-handlebars-template">
+<script id="result-tpl" type="text/x-handlebars-template">
     <div class='header'><a href='#' class="button header-button header-button-left">Back</a><h1>Details</h1></div>
+    {{#.}}
     <div class='details'>
-        <img class='employee-image' src='img/{{firstName}}_{{lastName}}.jpg' />
-        <h1>{{firstName}} {{lastName}}</h1>
-        <h2>{{title}}</h2>
-        <span class="location"></span>
+        <h1>{{text}}</h1>
+        {{#if details}}<h2>{{details}}</h2>{{/if}}
         <ul>
-            <li><a href="tel:{{officePhone}}">Call Office<br/>{{officePhone}}</a></li>
-            <li><a href="tel:{{cellPhone}}">Call Cell<br/>{{cellPhone}}</a></li>
-            <li><a href="sms:{{cellPhone}}">SMS<br/>{{cellPhone}}</a></li>
+            {{#if code}}<li>Code:&nbsp;{{code}}</li>{{/if}}
+            {{#if custom1}}<li>Custom1:&nbsp;{{custom1}}</li>{{/if}}
+            {{#if custom2}}<li>Custom2:&nbsp;{{custom2}}</li>{{/if}}
+            {{#if custom3}}<li>Custom3:&nbsp;{{custom3}}</li>{{/if}}
         </ul>
     </div>
+    {{/.}}
 </script>
 
-<script src="phonegap.js"></script>
+<!--<script src="phonegap.js"></script>-->
 <script src="lib/handlebars.js"></script>
 <script src="lib/jquery-1.8.2.min.js"></script>
-<script src="js/storage/memory-store.js"></script>
+<script src="js/storage/web-store.js"></script>
 <script src="js/HomeView.js"></script>
-<script src="js/EmployeeView.js"></script>
+<script src="js/ResultView.js"></script>
 <script src="js/main.js"></script>
-
 
 </body>
 </html>
