--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
     <div class="scroll"><ul class='result-list'></ul></div>
 </script>
 
+<script id="auth-tpl" type="text/x-handlebars-template">
+    <div class='header'><h1>EPS Search</h1>
+    </div>
+    <div class="logo"></div>
+    <div id="login_form"></div>
+</script>
+
+
 <script id="result-li-tpl" type="text/x-handlebars-template">
     {{#.}}
     <li><a href="#results/{{this.id}}"><div class="text">{{this.text}}</div><div class="details">{{this.details}}</div></a></li>
@@ -90,6 +98,7 @@
 <script src="js/storage/web-store.js"></script>
 <script src="js/HomeView.js"></script>
 <script src="js/ResultView.js"></script>
+<script src="js/Auth.js"></script>
 <script src="js/main.js"></script>
 
 </body>
