--- a/index.html
+++ b/index.html
@@ -101,5 +101,17 @@
 <script src="js/Auth.js"></script>
 <script src="js/main.js"></script>
 
+<div id="loading"></div>
+<script type="text/javascript">
+var $loading = $('#loading').hide();
+$(document)
+  .ajaxStart(function () {
+    $loading.show();
+  })
+  .ajaxStop(function () {
+    $loading.hide();
+  });
+</script>
+
 </body>
 </html>
