--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <script id="result-li-tpl" type="text/x-handlebars-template">
     {{#.}}
-    <li><a href="#results/{{this.id}}"><div class="text">{{this.text}}</div><div class="details">{{this.details}}</div></a></li>
+    <li><a href="#results/{{this.id}}"><div class="text">{{this.text}}</div><div class="details">{{ellipsis this.details 200 "&hellip;"}}</div></a></li>
     {{/.}}
 </script>
 
@@ -95,6 +95,7 @@
 <script src="phonegap.js"></script>
 <script src="lib/handlebars.js"></script>
 <script src="lib/jquery-1.8.2.min.js"></script>
+<script src="js/handlebars-helpers.js"></script>
 <script src="js/storage/web-store.js"></script>
 <script src="js/HomeView.js"></script>
 <script src="js/ResultView.js"></script>
