- Increased header height to address the iOS problem

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/foundation-icons/foundation-icons.css">
 </head>
 <body>
-
+<div style="position:absolute;top:0px;height:20px;width:100%;background-color:rgba(255,255,255,0.5);z-index:1000"></div>
 <script id="home-tpl" type="text/x-handlebars-template">
     <div class='header'>
       <h1>EPS Search</h1>
