- Style fixes, added number of items found

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class='search-bar'>
       <input id='search-key' class='search-key' type="search"/>
     </div>
-    <div class="scroll"><ul class='result-list'></ul></div>
+    <div class="scroll"><div id="status"></div><ul id="result-list"></ul></div>
 </script>
 
 <script id="project-options-tpl" type="text/x-handlebars-template">
