--- a/index.html
+++ b/index.html
@@ -95,10 +95,11 @@
 <script src="lib/handlebars.js"></script>
 <script src="lib/jquery-1.8.2.min.js"></script>
 <script src="js/handlebars-helpers.js"></script>
-<script src="js/storage/web-store.js"></script>
+<script src="js/storage/eps-store.js"></script>
 <script src="js/HomeView.js"></script>
 <script src="js/ResultView.js"></script>
 <script src="js/Auth.js"></script>
+<script src="js/Backend.js"></script>
 <script src="js/main.js"></script>
 
 <div id="loading"></div>
