--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 
   <link href="css/styles.css" rel="stylesheet">
   <link rel="stylesheet" href="css/foundation-icons/foundation-icons.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
 <body>
 <script id="home-tpl" type="text/x-handlebars-template">
     <div class='header'>
-      <h1>EPS Search</h1>
+      <h1>EKS - Event Planning Solution</h1>
       <a href="#" class="button" id="logout"><i class="fi-power"></i></a>
       <select id='pid' class="right" name="pid">
       </select>
@@ -40,7 +41,7 @@
 
 <script id="result-li-tpl" type="text/x-handlebars-template">
     {{#.}}
-    <li><a href="#results/{{this.id}}"><div class="project">{{this.project}}</div><div class="text">{{this.text}}</div><div class="details">{{ellipsis this.details 200 "&hellip;"}}</div></a></li>
+    <li><a href="#results/{{this.id}}"><div class="project">{{this.project}}</div><div class="breadcrumb">{{{this.bc}}}</div><div class="text">{{this.text}}</div><div class="details">{{ellipsis this.details 200 "&hellip;"}}</div></a></li>
     {{/.}}
 </script>
 
